# jig

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  agent-shape.toml  deny.toml
examples/: agent-shape.example.toml
scripts/: agent-shape-fixture.sh
src/: checkpoint.rs  judge.rs  lib.rs  main.rs  report.rs  runner.rs  schema.rs
templates/: README.md  agent-shape.toml
tests/: integration.rs
tests/fixtures/: stream-two-bash.jsonl
